# SFML

laba1/: CMakeLists.txt
laba1/include/: laba1.h
laba1/src/: laba1.cpp  main.cpp
laba2/: CMakeLists.txt
laba2/src/: main.cpp
laba2/src/CubeClass/: Cube.cpp  Cube.h
